# rust-in-r

./: .gitignore  .gitignore.swp  DESCRIPTION  Makefile  NAMESPACE  main.R
R/: execute_lr.R  extendr-wrappers.R  misc.R
man/: add_float.Rd  execute_lr.Rd  hello_world.Rd  my_sum.Rd  pass_string.Rd  return_obj.Rd  return_vec.Rd
src/: Makevars  Makevars.win  entrypoint.c
src/rust/: .gitignore.swp  Cargo.toml  README.md
src/rust/src/: lib.rs  readme.rs  rustr.rs
src/rust/src/pipeline/: mod.rs
